--- a/styles.css
+++ b/styles.css
@@ -120,7 +120,7 @@ body.game2 .container {
 }
 
 body.game3 .container {
-    background-image: url('./images/game3.webp'); /* Path to Game 3 image */
+    background-image: url('./images/dungbeetleenjoyingwhatIamdoing.png'); /* Path to Game 3 image */
 }
 
 body.game4 .container {
